--- a/create.html
+++ b/create.html
@@ -2,77 +2,169 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>OpenMeet – Create Meeting</title>
+  <title>OpenMeet – Create Meeting & Agenda</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="./assets/theme.css">
 </head>
 <body>
 <div class="wrap">
-  <a class="btn" href="./">← Back</a>
-  <h2>Create a New Meeting</h2>
+  <a class="btn" href="./">← Home</a>
+  <h2>Create a Meeting & Draft Agenda</h2>
 
+  <!-- Step 1: Board + meeting basics -->
   <div class="card">
-    <h3>1) Choose Board / Committee</h3>
-    <select id="board"></select>
+    <h3>1) Board / Meeting Details</h3>
+    <label>Board / Committee</label>
+    <select id="boardSel"></select>
+
+    <div style="display:grid;grid-template-columns:1fr 1fr;gap:12px;margin-top:8px">
+      <div><label>Date (YYYY-MM-DD)</label><input id="dateEl" placeholder="2025-09-16"></div>
+      <div><label>Start Time (HH:MM)</label><input id="timeEl" placeholder="18:00"></div>
+    </div>
+    <label>Title</label><input id="titleEl" placeholder="Regular Meeting">
+    <label>Location</label><input id="locationEl" placeholder="Town Hall, Room 1A">
+    <div class="muted" style="margin-top:6px">Tip: You can still add Packet items later from “Your Meetings”.</div>
   </div>
 
+  <!-- Step 2: Optional remote access blurb -->
   <div class="card">
-    <h3>2) Meeting Details</h3>
+    <h3>2) Remote Access (optional)</h3>
+    <label>Zoom / Remote URL</label><input id="remoteUrlEl" placeholder="https://zoom.us/join">
+    <label>Phone</label><input id="remotePhoneEl" placeholder="#1-929-205-6099 US (New York)">
     <div style="display:grid;grid-template-columns:1fr 1fr;gap:12px">
-      <div><label>Date (YYYY-MM-DD)</label><input id="mDate" placeholder="2025-10-20"></div>
-      <div><label>Start Time (HH:MM)</label><input id="mTime" placeholder="19:00"></div>
+      <div><label>Meeting ID</label><input id="remoteIdEl" placeholder="839 8717 1011"></div>
+      <div><label>Passcode</label><input id="remotePassEl" placeholder="826597"></div>
     </div>
-    <label>Title</label><input id="mTitle" placeholder="Regular Meeting">
-    <label>Location</label><input id="mLoc" placeholder="Town Hall">
-    <label>Your email (for confirmations)</label><input id="email" placeholder="you@example.com">
-    <button class="btn" id="btnCreate">Create meeting</button>
-    <div id="mOut" class="card" style="margin-top:8px;display:none"></div>
+  </div>
+
+  <!-- Step 3: Agenda items -->
+  <div class="card">
+    <h3>3) Agenda Items</h3>
+    <div id="itemsRoot"></div>
+    <div style="display:flex;gap:8px;margin-top:8px">
+      <button class="btn" id="btnAdd">Add item</button>
+      <button class="btn" id="btnClear">Clear all</button>
+    </div>
+    <label style="margin-top:10px">Footer note (optional)</label>
+    <input id="footerEl" placeholder="e.g., Posted per OML within 48 hours.">
+  </div>
+
+  <!-- Step 4: Submit -->
+  <div class="card">
+    <h3>4) Submit to Clerk</h3>
+    <label>Your email (for confirmation)</label><input id="emailEl" placeholder="you@example.com">
+    <button class="btn" id="btnSubmit">Create meeting & send agenda to Clerk</button>
+    <div id="out" class="muted" style="margin-top:8px"></div>
   </div>
 </div>
 
 <script type="module">
   import { WEBAPP_URL } from './js/auth.js';
 
-  async function j(u){
-    const r = await fetch(u);
-    if (!r.ok) throw new Error('Failed to load: ' + r.status);
-    return r.json();
-  }
-  async function post(bodyObj){
-    const r = await fetch(WEBAPP_URL, {
-      method: 'POST',
-      headers: { 'Content-Type': 'text/plain;charset=utf-8' }, // avoid preflight
-      body: JSON.stringify(bodyObj),
-    });
-    const text = await r.text();
-    let out;
-    try { out = JSON.parse(text); } catch { throw new Error('Bad JSON from server: ' + text.slice(0,200)); }
-    if (out.error) throw new Error(out.error);
-    return out;
+  async function GET(url){ const r=await fetch(url); if(!r.ok) throw new Error('GET '+r.status); return r.json(); }
+  async function POST(obj){
+    const r=await fetch(WEBAPP_URL,{method:'POST',headers:{'Content-Type':'text/plain;charset=utf-8'},body:JSON.stringify(obj)});
+    const t=await r.text(); let out; try{ out=JSON.parse(t);}catch{ throw new Error('Bad JSON: '+t.slice(0,200)); }
+    if (out.error) throw new Error(out.error); return out;
   }
 
-  // Load boards with defensive messaging
-  const sel = document.getElementById('board');
+  // Elements (avoid variable names like "date" that can collide)
+  const boardSel      = document.getElementById('boardSel');
+  const dateEl        = document.getElementById('dateEl');
+  const timeEl        = document.getElementById('timeEl');
+  const titleEl       = document.getElementById('titleEl');
+  const locationEl    = document.getElementById('locationEl');
+  const remoteUrlEl   = document.getElementById('remoteUrlEl');
+  const remotePhoneEl = document.getElementById('remotePhoneEl');
+  const remoteIdEl    = document.getElementById('remoteIdEl');
+  const remotePassEl  = document.getElementById('remotePassEl');
+  const footerEl      = document.getElementById('footerEl');
+  const emailEl       = document.getElementById('emailEl');
+  const outEl         = document.getElementById('out');
+
+  // Load boards
   try {
-    const boards = await j(`${WEBAPP_URL}?route=api/ui/boards`);
-    sel.innerHTML = (boards && boards.length)
+    const boards = await GET(`${WEBAPP_URL}?route=api/ui/boards`);
+    boardSel.innerHTML = boards.length
       ? '<option value="">Select a board/committee…</option>' + boards.map(b=>`<option value="${b.board_id}">${b.name}</option>`).join('')
-      : '<option value="">No boards found — check the Boards sheet (header must be "is_active")</option>';
-  } catch (e) {
-    sel.innerHTML = '<option value="">Could not load boards (check WEBAPP_URL)</option>';
+      : '<option value="">No boards found</option>';
+  } catch {
+    boardSel.innerHTML = '<option value="">Could not load boards</option>';
   }
 
-  const mOut = document.getElementById('mOut');
-  document.getElementById('btnCreate').onclick = async ()=>{
-    const board_id=sel.value, date=mDate.value.trim(), title=mTitle.value.trim()||'Regular', loc=mLoc.value.trim(), time=mTime.value.trim(), email=document.getElementById('email').value.trim();
-    if(!board_id) return alert('Choose a board');
-    if(!date) return alert('Enter a date');
-    try{
-      const res = await post({action:'create_meeting_open', board_id, date, title, location:loc, start_time:time, submitterEmail:email});
-      mOut.style.display='block';
-      mOut.textContent = 'Created meeting: '+res.meeting_id+' (check your email for confirmation)';
-      alert('Meeting created');
-    }catch(e){ alert(e.message); }
+  // Agenda items state
+  const state = { items: [] };
+  const itemsRoot = document.getElementById('itemsRoot');
+
+  function renderItems(){
+    itemsRoot.innerHTML = '';
+    state.items.forEach((it, idx)=>{
+      const row = document.createElement('div'); row.className='card';
+      row.innerHTML = `
+        <div style="display:grid;grid-template-columns:1fr auto;gap:8px;align-items:center">
+          <div>
+            <label>Title</label>
+            <input data-k="title" data-i="${idx}" value="${it.title||''}" placeholder="e.g., Approval of Minutes">
+            <label>Notes (optional)</label>
+            <input data-k="notes" data-i="${idx}" value="${it.notes||''}" placeholder="e.g., Minutes of Sep 2, 2025">
+          </div>
+          <div style="display:flex;flex-direction:column;gap:6px">
+            <button class="btn" data-act="up" data-i="${idx}">↑</button>
+            <button class="btn" data-act="down" data-i="${idx}">↓</button>
+            <button class="btn" data-act="del" data-i="${idx}">✕</button>
+          </div>
+        </div>`;
+      itemsRoot.appendChild(row);
+    });
+    itemsRoot.querySelectorAll('input').forEach(inp=>{
+      inp.oninput = (e)=>{ const i=Number(e.target.dataset.i), k=e.target.dataset.k; state.items[i][k]=e.target.value; };
+    });
+    itemsRoot.querySelectorAll('button').forEach(btn=>{
+      btn.onclick = (e)=>{
+        const i=Number(e.target.dataset.i), act=e.target.dataset.act;
+        if (act==='up' && i>0){ const t=state.items[i-1]; state.items[i-1]=state.items[i]; state.items[i]=t; renderItems(); }
+        if (act==='down' && i<state.items.length-1){ const t=state.items[i+1]; state.items[i+1]=state.items[i]; state.items[i]=t; renderItems(); }
+        if (act==='del'){ state.items.splice(i,1); renderItems(); }
+      };
+    });
+  }
+  document.getElementById('btnAdd').onclick   = ()=>{ state.items.push({title:'',notes:''}); renderItems(); };
+  document.getElementById('btnClear').onclick = ()=>{ if(confirm('Clear all items?')){ state.items=[]; renderItems(); } };
+  renderItems();
+
+  // Submit: create meeting → generate agenda in Drafts → Clerk queue
+  document.getElementById('btnSubmit').onclick = async ()=>{
+    const board_id = boardSel.value;
+    const dVal     = dateEl.value.trim();
+    const tVal     = timeEl.value.trim();
+    const titleVal = titleEl.value.trim() || 'Regular Meeting';
+    const locVal   = locationEl.value.trim();
+    const emailVal = emailEl.value.trim();
+
+    if (!board_id) return alert('Choose a board');
+    if (!dVal)     return alert('Enter a date');
+    if (state.items.length === 0) return alert('Add at least one agenda item');
+
+    try {
+      // 1) Create meeting shell
+      const created = await POST({ action:'create_meeting_open', board_id, date:dVal, start_time:tVal, title:titleVal, location:locVal, submitterEmail:emailVal });
+
+      // 2) Send agenda for Clerk approval (Drafts)
+      await POST({
+        action:'create_agenda_from_form',
+        meeting_id: created.meeting_id,
+        items: state.items,
+        footerNote: footerEl.value,
+        submitterEmail: emailVal,
+        remote: { url: remoteUrlEl.value, phone: remotePhoneEl.value, id: remoteIdEl.value, pass: remotePassEl.value }
+      });
+
+      outEl.textContent = 'Agenda submitted to Clerk. You’ll get a confirmation email.';
+      alert('Agenda sent to Clerk for approval/posting.');
+      state.items=[]; renderItems();
+    } catch (e) {
+      alert(e.message);
+    }
   };
 </script>
 </body>
