--- a/index.html
+++ b/index.html
@@ -2,39 +2,49 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>OpenMeet – Sutton</title>
+  <title>OpenMeet – Town of Sutton</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="./assets/theme.css">
+  <style>
+    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(320px,1fr));gap:12px}
+    .badge{font-size:12px;border-radius:999px;padding:4px 8px;background:#0b1020;color:#d1d5db}
+  </style>
+  <script type="module">
+    import { WEBAPP_URL } from './js/auth.js';
+    const $=s=>document.querySelector(s);
+    async function jget(u){ const r=await fetch(u); const j=await r.json(); if(j.error) throw new Error(j.error); return j; }
+    (async function(){
+      const meetings = await jget(`${WEBAPP_URL}?route=api/public/meetings&limit=200`);
+      const grid=$('#grid'); grid.innerHTML='';
+      meetings.forEach(m=>{
+        const el=document.createElement('a');
+        el.href = `./meeting.html?id=${m.meeting_id}`;
+        el.className='card';
+        el.innerHTML = `
+          <div style="display:flex;justify-content:space-between;align-items:center">
+            <div class="badge">${(m.status||'').toUpperCase()}</div>
+            <div class="muted">${m.date||''} ${m.start_time||''}</div>
+          </div>
+          <div style="margin-top:8px;font-size:18px;font-weight:800">${m.board_name||''}</div>
+          <div class="muted">${m.title||''}</div>
+          <div class="muted" style="margin-top:4px">${m.location||''}</div>`;
+        grid.appendChild(el);
+      });
+      if(!grid.children.length) grid.innerHTML='<div class="muted">No upcoming meetings.</div>';
+    })().catch(e=>{ console.error(e); alert('Failed to load'); });
+  </script>
 </head>
 <body>
-<div class="wrap">
-  <header style="display:flex;justify-content:space-between;align-items:center">
-    <h1>OpenMeet</h1>
-    <div>
-      <a class="btn" href="./create.html">Create a meeting</a>
-      <a class="btn" href="./revise.html">Revise a meeting</a>
-      <a class="btn" href="./admin.html">Admin</a>
-    </div>
-  </header>
-
-  <h3>Upcoming / Recent</h3>
-  <div id="grid" class="grid"></div>
-</div>
-
-<script type="module">
-  import { WEBAPP_URL } from './js/auth.js';
-  async function j(u){ const r=await fetch(u); return r.json(); }
-  const meetings = await j(`${WEBAPP_URL}?route=api/public/meetings&limit=30`);
-  const grid = document.getElementById('grid');
-  meetings.forEach(m=>{
-    const d=document.createElement('div'); d.className='card';
-    d.innerHTML = `
-      <div class="muted">${m.board_name||''}</div>
-      <div style="font-size:18px;margin:6px 0"><strong>${m.date}</strong> — ${m.title||''}</div>
-      <div>${m.location||''}</div>
-      <div style="margin-top:8px"><a class="btn" href="./meeting.html?id=${encodeURIComponent(m.meeting_id)}">View</a></div>`;
-    grid.appendChild(d);
-  });
-</script>
+  <div class="wrap">
+    <header style="display:flex;align-items:center;justify-content:space-between;margin-bottom:12px">
+      <h2 style="font-weight:900">OpenMeet — Town of Sutton</h2>
+      <nav style="display:flex;gap:8px">
+        <a class="btn" href="./create.html">Create Meeting</a>
+        <a class="btn" href="./my.html">Your Meetings</a>
+        <a class="btn" href="./admin.html">Clerk Console</a>
+      </nav>
+    </header>
+    <div id="grid" class="grid"></div>
+  </div>
 </body>
 </html>
